Added left leaning redblack tree

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,11 +1,13 @@
 cmake_minimum_required(VERSION 3.18)
 
-project(TestLibrary VERSION 1.0)
-
-add_executable(TestLibrary
-    tries.cc
-)
-
-include_directories(TestLibrary PUBLIC 
+set(include_common
     ${CMAKE_SOURCE_DIR}/include
 )
+
+project(TestLibraryTries VERSION 1.0)
+add_executable(TestLibraryTries tries.cc)
+include_directories(TestLibraryTries PUBLIC ${include_common})
+
+project(TestLibraryTree VERSION 1.0)
+add_executable(TestLibraryTree tree.cc)
+include_directories(TestLibraryTree PUBLIC ${include_common})
